// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute forex endpoint should return error on missing input 1`] = `
{
  "error": {
    "message": "[Param: quote] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute forex endpoint should return error when no rate is returned 1`] = `
{
  "errorMessage": "FXMacroData returned no rate for USD/BRL",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute forex endpoint should return success 1`] = `
{
  "data": {
    "result": 161.1288,
  },
  "result": 161.1288,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1781740800000,
  },
}
`;

exports[`execute forex endpoint should return success with the price alias and lowercase symbols 1`] = `
{
  "data": {
    "result": 161.1288,
  },
  "result": 161.1288,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1781740800000,
  },
}
`;

exports[`execute indicator endpoint should return error on missing input 1`] = `
{
  "error": {
    "message": "[Param: indicator] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute indicator endpoint should return error when no value is returned 1`] = `
{
  "errorMessage": "FXMacroData returned no value for USD gdp",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute indicator endpoint should return success 1`] = `
{
  "data": {
    "result": 3,
  },
  "result": 3,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1772433000000,
  },
}
`;
